--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -139,8 +139,8 @@
  <table width="100%" border="1" cellspacing="2" cellpadding="3">
    <tr>
      <th>
-     <img src="/scarab/images/icon_uparrow.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
-     <img src="/scarab/images/icon_downarrow.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
+     <img src="$data.Request.ContextPath/images/icon_uparrow.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
+     <img src="$data.Request.ContextPath/images/icon_downarrow.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
      </th>
      <th>URL</th>
      <th>Description</th>
