--- a/src/templates/screens/admin/GlobalAttributeSelect.vm
+++ b/src/templates/screens/admin/GlobalAttributeSelect.vm
@@ -37,8 +37,8 @@ $page.setTitle("Select global attribute")
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
 <tr>
 <th nowrap="nowrap">
-<img src="/scarab/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
-<img src="/scarab/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
+<img src="$data.Request.ContextPath/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
+<img src="$data.Request.ContextPath/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
 </th>
 <th>Input type</th>
 <th>Attribute name</th>
