i noticed that another issue tracking system has this column in the UI...scarab already saves this information, so lets just expose it with a simple template change.
i heart scarab

--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -397,6 +397,7 @@
     <th>Date stamp</th>
     <th>Action</th>
     <th>Note</th>
+    <th>By</th>
   </tr>
   #foreach ($act in $activity)
     #indexedRows($velocityCount)
@@ -419,6 +420,10 @@
      #if ($act.Transaction.Attachment)
        $act.Transaction.Attachment.DataAsString
      #else &#160; #end
+     </td>
+     <td>
+     #set ($user = $scarabR.getUser($act.Transaction.CreatedBy))
+     <a href="mailto:$user.Email">$user.FirstName $user.LastName</a>
      </td>
     </tr>
   #end
