--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -87,13 +87,18 @@
   <table border="0" cellspacing="0" cellpadding="3" width="100%">
   <tr>
    <td nowrap="nowrap">
-            <form action="$link.setPage("ViewIssue.vm")" method="get">
-   <select>
-   <option>saved queries</option>
-   <option>query one</option>
-   <option>query two</option>
-   </select>
-   <input type="submit" name="query" value="Go" />
+        #set ($action = $link.setPage("IssueList.vm").setAction("Search").addPathInfo("nextTemplate", "IssueList.vm"))
+
+        <form action="$action" method="post">
+			<select name="queryId">
+           #foreach ( $query in $scarabR.CurrentModule.getPrivateQueries($data.User) )
+            <option value="$query.QueryId">$query.Name</option>
+           #end
+           #foreach ( $query in $module.GlobalQueries )
+            <option value="$query.QueryId">$query.Name</option>
+           #end
+			</select>
+			<input type="submit"  value="Go" class="bttn" name="eventSubmit_doRunstoredquery"/>
    &nbsp;<img src="$data.Request.ContextPath/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
             <input type="text" name="id" size="15" maxlength="255" />
             <input type="submit" name="Submit" value="Query" />
