--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -1,18 +1,27 @@
-<div class="app" id="div2-1-4-0">
 $page.setTitle("Attribute Editor")
+
 #set ( $module = $scarabR.CurrentModule )
 #set ( $moduleGroup = $intake.Module.mapTo($module) )
+#set ($issueType = $scarabR.IssueType)
+#set ($issueTypeId = $data.Parameters.getString("issueTypeId"))
+#set ( $issueTypeGroup = $intake.IssueType.mapTo($issueType) )
+
+<div class="app" id="div2-1-4-0">
+
  <h2>Customize/create artifact type (2.1.4.0)</h2>
-<form method="get" action="$link.setPage("admin,artifacttypeedit.vm")">
+<form method="get" action="$link.setPage("admin,ArtifactTypeEdit.vm")">
       <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
       <input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
+     #if ($issueTypeId)
+      <input type="hidden" name="issueTypeId" value="$issueTypeId" />
+     #end
 <div class="functnbar">
 <table cellpadding="4" cellspacing="0" border="1">
 <tr>
 <td class="firstchild"><div>
 Screen options
 </div>
-<input type="submit" value="Submit changes" name="eventSubmit_doModifyattributes" />&#160;<input type="submit" value="Cancel" />
+<input type="submit" value="Submit changes" name="eventSubmit_doModifyissuetype" />&#160;<input type="submit" value="Cancel" />
 </td>
 <td><div>
 Attribute group options
@@ -21,21 +30,17 @@ Attribute group options
 </td>
 </tr></table>
 </div>
+
         <h3>Artifact type details</h3>
         <div class="axial">
             <table border="0" cellspacing="2" cellpadding="3">
             <tr>
             <th>Artifact type name</th>
-            <td><input type="text" size="25" name="$moduleGroup.Name.Key" value="$!moduleGroup.Name.Value" /></td>
+            <td><input type="text" size="25" name="$issueTypeGroup.Name.Key" value="$!issueTypeGroup.Name.Value" /></td>
             </tr>
             <tr>
             <th>Artifact type descr</th>
-            <td><textarea rows="4" cols="40" name="$moduleGroup.Description.Key">$!moduleGroup.Description.Value</textarea></td>
-            </tr>
-            <tr>
-            <th>author</th>
-            <td><div>Joe Smo</div>
-            <a href="#">joes@users.com</a></td>
+            <td><textarea rows="4" cols="40" name="$issueTypeGroup.Description.Key">$!issueTypeGroup.Description.Value</textarea></td>
             </tr>
             </table>
         </div>
@@ -58,15 +63,17 @@ Attribute group options
         </select>
         most recent artifact instance comments (otherwise, a link will appear to a seperate page).
         </p>
-        <h3>Attribute groups</h3>
-#set ( $groups = $module.AttributeGroups)
-#if ($groups.isEmpty())
+#set ( $groups = $issueType.getAttributeGroups($module))
+#if ($groups.isEmpty() )
+   #if ($issueType.IssueTypeId)
 ## NO GROUPS YET - user must push button to create default groups
 <p><strong class="alert">This module has no groups. Please click to create default groups.</strong></p>
       <p><input type="submit" value="create default attribute groups" name="eventSubmit_doCreatedefaults" /></p>
-</form>
+   #end
 #else
-        #set ( $maxNum = $module.AttributeGroups.size()+1 )
+## LIST GROUPS
+        <h3>Attribute groups</h3>
+        #set ( $maxNum = $issueType.getAttributeGroups($module).size()+1 )
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
         <tr>
         <th nowrap="nowrap">Select</th>
@@ -76,21 +83,21 @@ Attribute group options
         </tr>
   #foreach ( $group in $groups )
 ## DEDUPE
-     #if ($velocityCount == ($module.DedupeSequence))
+     #if ($velocityCount == ($issueType.getDedupeSequence($module)))
          <tr>
              <td>&nbsp;</td>
              <td>Duplicate check</td>
              <td>#booleanCheckbox ($moduleGroup.Dedupe)</td>
-             <td>#numericSelect( "dupe_order" 1 $maxNum $module.DedupeSequence 1 )</td>
+             <td>#numericSelect( "dupe_order" 1 $maxNum $issueType.getDedupeSequence($module) 1 )</td>
          </tr>
-       #end
-<form method="get" action="$link.setPage("admin,artifacttypeedit.vm")">
+    #end
+<Form method="get" action="$link.setPage("admin,ArtifactTypeEdit.vm")">
       <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
       <input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
     #set ( $agGroup = $intake.AttributeGroup.mapTo($group) )
         #rows()
         <td><input type="checkbox" name="delete_group_$group.AttributeGroupId" /></td>
-        <td><a href="$link.setPage("admin,attributegroup.vm").addpathinfo("groupid", $group.attributegroupid)">$group.Name</a></td>
+        <td><a href="$link.setPage("admin,AttributeGroup.vm").addPathInfo("groupid", $group.AttributeGroupId)">$group.Name</a></td>
         <td>#booleanCheckbox ($agGroup.Active)</td>
         <td>
             #numericSelect( $agGroup.Order.Key 1 $maxNum $agGroup.Order.Value 1 )</td> </tr>
@@ -99,20 +106,23 @@ Attribute group options
         </td>
         </tr>
         </table>
-        <div class="functnbar2">
-            <table cellpadding="4" cellspacing="0" border="1">
- <tr>
-  <td class="firstchild"><div>
+
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
+<tr>
+<td class="firstchild"><div>
 Screen options
-</div><input type="submit" value="Submit changes" name="eventSubmit_doModifyattributes" />&#160;<input type="submit" value="Cancel" /></td>
+</div>
+<input type="submit" value="Submit changes" name="eventSubmit_doModifyissuetype" />&#160;<input type="submit" value="Cancel" />
+</td>
 <td><div>
 Attribute group options
 </div>
-<input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;<input type="submit" value="copy" />&#160;<input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;<input type="submit" value="resort" />
+<input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;<input type="submit" value="Copy" />&#160;<input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;<input type="submit" value="Resort" />
 </td>
-</tr>
-</table>
+</tr></table>
 </div>
+
 $intake.declareGroups()
 </form>
 </div>
